--- a/src/Test/Umbraco772/Views/Single2.cshtml
+++ b/src/Test/Umbraco772/Views/Single2.cshtml
@@ -42,7 +42,7 @@
 		@<text>
 			<div>
 				This icon is at 
-				@((Model.Content.GetProperty("map").Value as Terratype.Models.Model).Position)
+				@((Model.Content.GetProperty("map").Value as Terratype.Models.Map).Position)
 			</div>
 		</text>
 	)
@@ -53,7 +53,7 @@
 		@<text>
 			<div style="background-color:yellow;">
 				This icon is at
-				@((Model.Content.GetProperty("map").Value as Terratype.Models.Model).Position)
+				@((Model.Content.GetProperty("map").Value as Terratype.Models.Map).Position)
 		 </div>
 	  </text>)
 
